--- a/240203/style.css
+++ b/240203/style.css
@@ -74,7 +74,6 @@ header .btn a span {
 }
 
 .container {
-  border: 1px solid red;
   background: url("./img/bg_main.jpg");
   width: 100%;
   height: 920px;
@@ -586,6 +585,100 @@ header .btn a span {
   color: #fff;
 }
 
+.contact {
+  background: #f4e8df;
+  width: 100%;
+  height: 900px;
+}
+.contact .seul {
+  padding: 100px 0 50px 0;
+  text-align: center;
+}
+.contact .seul h1 {
+  color: #ff5484;
+  font-size: 60px;
+  font-family: "Roboto_head";
+  font-weight: 900;
+  font-style: italic;
+}
+.contact .contact-inner {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+}
+.contact .contact-inner .mysocial {
+  position: relative;
+  width: 500px;
+  height: 500px;
+}
+.contact .contact-inner .mysocial .network {
+  position: absolute;
+  right: 16%;
+  top: 20%;
+  font: bold 40px/1.5rem "Roboto";
+}
+.contact .contact-inner .mysocial .social {
+  position: absolute;
+  right: 65%;
+  top: 38%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+.contact .contact-inner .mysocial .social i {
+  padding: 12px;
+  font-size: 30px;
+}
+.contact .contact-inner .mysocial .link {
+  position: absolute;
+  right: 25%;
+  top: 36%;
+}
+.contact .contact-inner .mysocial .link h3 {
+  padding: 16px;
+}
+.contact .contact-inner .map {
+  width: 800px;
+  height: 500px;
+  position: relative;
+}
+.contact .contact-inner .map .fa-location-dot {
+  position: absolute;
+  top: 60%;
+  right: 30%;
+  color: crimson;
+  font-size: 40px;
+  animation: home 2s linear infinite;
+  animation-fill-mode: both;
+}
+.contact .contact-inner .map iframe {
+  width: 100%;
+  height: 100%;
+}
+@keyframes home {
+  0% {
+    opacity: 0.3;
+    transform: scale(1);
+  }
+  25% {
+    opacity: 0.6;
+    transform: scale(1.2);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.3);
+  }
+  75% {
+    opacity: 0.6;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 0.3;
+    transform: scale(1);
+  }
+}
+
 /*============= tablet============ */
 @media screen and (max-width: 768px) {
   header {
@@ -655,8 +748,8 @@ header .btn a span {
   }
   header .trigger span {
     display: block;
-    width: 40px;
-    height: 2px;
+    width: 30px;
+    height: 3px;
     margin-bottom: 8px;
     background: #000;
   }
