--- a/240203/style.scss
+++ b/240203/style.scss
@@ -64,7 +64,6 @@ header {
   }
 }
 .container {
-  border: 1px solid red;
   background: url("./img/bg_main.jpg");
   width: 100%;
   height: 920px;
@@ -574,6 +573,100 @@ header {
     }
   }
 }
+.contact {
+  background: #f4e8df;
+  width: 100%;
+  height: 900px;
+  .seul {
+    padding: 100px 0 50px 0;
+    text-align: center;
+    h1 {
+      color: #ff5484;
+      font-size: map-get($font-size, large-heading);
+      font-family: map-get($font-family, main);
+      font-weight: 900;
+      font-style: italic;
+    }
+  }
+  .contact-inner {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+
+    .mysocial {
+      position: relative;
+      width: 500px;
+      height: 500px;
+      .network {
+        position: absolute;
+        right: 16%;
+        top: 20%;
+        font: bold 40px/1.5rem "Roboto";
+      }
+      .social {
+        position: absolute;
+        right: 65%;
+        top: 38%;
+        display: flex;
+        flex-flow: column nowrap;
+        i {
+          padding: 12px;
+          font-size: 30px;
+        }
+      }
+      .link {
+        position: absolute;
+        right: 25%;
+        top: 36%;
+        h3 {
+          padding: 16px;
+        }
+      }
+    }
+    .map {
+      width: 800px;
+      height: 500px;
+      position: relative;
+      .fa-location-dot {
+        position: absolute;
+        top: 60%;
+        right: 30%;
+        color: crimson;
+        font-size: 40px;
+        animation: home 2s linear infinite;
+        animation-fill-mode: both;
+      }
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+      @keyframes home {
+        0% {
+          opacity: 0.3;
+          transform: scale(1);
+        }
+        25% {
+          opacity: 0.6;
+          transform: scale(1.2);
+        }
+        50% {
+          opacity: 1;
+          transform: scale(1.3);
+        }
+        75% {
+          opacity: 0.6;
+          transform: scale(1.2);
+        }
+        100% {
+          opacity: 0.3;
+          transform: scale(1);
+        }
+      }
+    }
+  }
+}
 /*============= tablet============ */
 @media screen and (max-width: 768px) {
   header {
@@ -644,8 +737,8 @@ header {
       cursor: pointer;
       span {
         display: block;
-        width: 40px;
-        height: 2px;
+        width: 30px;
+        height: 3px;
         margin-bottom: 8px;
         background: #000;
       }
