--- a/240203/style.css
+++ b/240203/style.css
@@ -279,11 +279,11 @@ header .btn a span {
 .section01 input {
   display: none;
 }
-.section01 input[id=tab1]:checked ~ .section-menu .first-menu {
+.section01 input[id=tab1]:checked ~ .section-menu {
   left: 0;
 }
-.section01 input[id=tab2]:checked ~ .section-menu .first-menu {
-  left: -1830px;
+.section01 input[id=tab2]:checked ~ .section-menu {
+  left: -1900px;
 }
 .section01 .kim {
   margin: 100px 0 50px 0;
@@ -297,18 +297,17 @@ header .btn a span {
   font-style: italic;
 }
 .section01 .section-menu {
-  width: 1800px;
+  width: 5000px;
   height: 520px;
-  margin: 0 auto;
   position: relative;
   overflow: hidden;
+  transition: all 0.5s ease-in;
 }
 .section01 .section-menu .first-menu {
   position: absolute;
-  left: 0;
+  left: 2%;
   top: 10%;
-  width: 5000px;
-  transition: all 0.5s ease-in;
+  width: 1960px;
 }
 .section01 .section-menu .first-menu .birth {
   background: #ffbe6f;
@@ -319,18 +318,9 @@ header .btn a span {
 .section01 .section-menu .first-menu .style {
   background: #7cc1eb;
 }
-.section01 .section-menu .first-menu .a {
-  background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
-}
-.section01 .section-menu .first-menu .b {
-  background: url("./img/board.jpg") 50% 60%/cover no-repeat;
-}
-.section01 .section-menu .first-menu .c {
-  background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
-}
 .section01 .section-menu .first-menu div {
   display: inline-block;
-  width: 400px;
+  width: 380px;
   height: 400px;
   border-radius: 50% 50% 0 0;
   margin: 0 100px;
@@ -405,6 +395,31 @@ header .btn a span {
   100% {
     transform: scale(1.3);
   }
+}
+.section01 .section-menu .second-menu {
+  display: block;
+  position: absolute;
+  top: 10%;
+  left: 1960px;
+  height: 400px;
+  width: 1960px;
+}
+.section01 .section-menu .second-menu div {
+  display: inline-block;
+  width: 380px;
+  height: 400px;
+  border-radius: 50% 50% 0 0;
+  margin: 0 100px;
+  position: relative;
+}
+.section01 .section-menu .second-menu .a {
+  background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
+}
+.section01 .section-menu .second-menu .b {
+  background: url("./img/board.jpg") 50% 60%/cover no-repeat;
+}
+.section01 .section-menu .second-menu .c {
+  background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
 }
 .section01 .buttons {
   width: 500px;
@@ -799,11 +814,11 @@ header .btn a span {
     flex-flow: column wrap;
     justify-content: center;
     align-items: end;
-    gap: 12%;
+    gap: 15%;
   }
   .container .frame .content .name span {
     color: #222;
-    font-size: 60px;
+    font-size: 45px;
     font-family: "Roboto_head";
     font-weight: 900;
     font-style: italic;
@@ -959,11 +974,11 @@ header .btn a span {
   .section01 input {
     display: none;
   }
-  .section01 input[id=tab1]:checked ~ .section-menu .first-menu {
+  .section01 input[id=tab1]:checked ~ .section-menu {
     left: 0;
   }
-  .section01 input[id=tab2]:checked ~ .section-menu .first-menu {
-    left: -1830px;
+  .section01 input[id=tab2]:checked ~ .section-menu {
+    left: -806px;
   }
   .section01 .kim {
     margin: 100px 0 50px 0;
@@ -971,23 +986,21 @@ header .btn a span {
   }
   .section01 .kim h1 {
     color: #ff5484;
-    font-size: 60px;
+    font-size: 35px;
     font-family: "Roboto_head";
-    font-weight: 900;
+    font-weight: 600;
     font-style: italic;
   }
   .section01 .section-menu {
-    width: 1800px;
-    height: 520px;
-    margin: 0 auto;
+    width: 768px;
+    height: 1000px;
     position: relative;
-    overflow: hidden;
   }
   .section01 .section-menu .first-menu {
     position: absolute;
+    top: 5%;
     left: 0;
-    top: 10%;
-    width: 5000px;
+    width: 786px;
     transition: all 0.5s ease-in;
   }
   .section01 .section-menu .first-menu .birth {
@@ -999,22 +1012,13 @@ header .btn a span {
   .section01 .section-menu .first-menu .style {
     background: #7cc1eb;
   }
-  .section01 .section-menu .first-menu .a {
-    background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
-  }
-  .section01 .section-menu .first-menu .b {
-    background: url("./img/board.jpg") 50% 60%/cover no-repeat;
-  }
-  .section01 .section-menu .first-menu .c {
-    background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
-  }
   .section01 .section-menu .first-menu div {
     display: inline-block;
-    width: 400px;
-    height: 400px;
+    width: 220px;
+    height: 220px;
     border-radius: 50% 50% 0 0;
-    margin: 0 100px;
     position: relative;
+    margin: 5px;
   }
   .section01 .section-menu .first-menu div h1 {
     position: absolute;
@@ -1022,7 +1026,7 @@ header .btn a span {
     left: 50%;
     transform: translateX(-50%);
     font-family: "Roboto_head";
-    font-size: 45px;
+    font-size: 30px;
     color: #fff;
     font-style: italic;
   }
@@ -1035,16 +1039,16 @@ header .btn a span {
     left: 50%;
     transform: translateX(-50%);
     font-family: "Roboto";
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
   }
   .section01 .section-menu .first-menu div p span {
     font-family: "Roboto";
-    font-size: 35px;
+    font-size: 25px;
   }
   .section01 .section-menu .first-menu div p .daytext {
     position: absolute;
-    left: 28%;
+    left: 33%;
     top: -20%;
     animation: daytext 3s 0.1s ease-out infinite;
   }
@@ -1058,7 +1062,7 @@ header .btn a span {
   }
   .section01 .section-menu .first-menu div p .personaltext {
     position: absolute;
-    left: 35%;
+    left: 39%;
     top: -20%;
     animation: personaltext 3s linear infinite;
     animation-delay: 0.2s;
@@ -1073,7 +1077,7 @@ header .btn a span {
   }
   .section01 .section-menu .first-menu div p .styletext {
     position: absolute;
-    left: 35%;
+    left: 39%;
     top: -20%;
     animation: daytext 3s linear infinite;
     animation-delay: 0.3s;
@@ -1086,7 +1090,30 @@ header .btn a span {
       transform: scale(1.3);
     }
   }
+  .section01 .section-menu .second-menu {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    width: 768x;
+  }
+  .section01 .section-menu .second-menu div {
+    display: inline-block;
+    width: 220px;
+    height: 220px;
+    border-radius: 50% 50% 0 0;
+    margin: 5px;
+  }
+  .section01 .section-menu .second-menu .a {
+    background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg") center/cover no-repeat;
+  }
+  .section01 .section-menu .second-menu .b {
+    background: url("./img/board.jpg") 50% 60%/cover no-repeat;
+  }
+  .section01 .section-menu .second-menu .c {
+    background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50% 70%/cover no-repeat;
+  }
   .section01 .buttons {
+    display: none;
     width: 500px;
     height: 200px;
     text-align: center;
@@ -1096,8 +1123,8 @@ header .btn a span {
   .section01 .buttons label {
     margin: 0 5px;
     display: inline-block;
-    width: 1em;
-    height: 1em;
+    width: 15px;
+    height: 15px;
     border-radius: 100%;
     background: #ff5484;
     cursor: pointer;
@@ -1126,9 +1153,9 @@ header .btn a span {
   }
   .section02 .yi h1 {
     color: #ff5484;
-    font-size: 60px;
+    font-size: 35px;
     font-family: "Roboto_head";
-    font-weight: 900;
+    font-weight: 600;
     font-style: italic;
   }
   .section02 .section-inner {
@@ -1262,5 +1289,98 @@ header .btn a span {
     transform: translate(-50%, -50%);
     font-size: 2em;
     color: #fff;
+  }
+  .contact {
+    background: #f4e8df;
+    width: 100%;
+    height: 900px;
+  }
+  .contact .seul {
+    padding: 100px 0 50px 0;
+    text-align: center;
+  }
+  .contact .seul h1 {
+    color: #ff5484;
+    font-size: 35px;
+    font-family: "Roboto_head";
+    font-weight: 900;
+    font-style: italic;
+  }
+  .contact .contact-inner {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+  }
+  .contact .contact-inner .mysocial {
+    position: relative;
+    width: 500px;
+    height: 500px;
+  }
+  .contact .contact-inner .mysocial .network {
+    position: absolute;
+    right: 16%;
+    top: 20%;
+    font: bold 40px/1.5rem "Roboto";
+  }
+  .contact .contact-inner .mysocial .social {
+    position: absolute;
+    right: 65%;
+    top: 38%;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .contact .contact-inner .mysocial .social i {
+    padding: 12px;
+    font-size: 30px;
+  }
+  .contact .contact-inner .mysocial .link {
+    position: absolute;
+    right: 25%;
+    top: 36%;
+  }
+  .contact .contact-inner .mysocial .link h3 {
+    padding: 16px;
+  }
+  .contact .contact-inner .map {
+    width: 800px;
+    height: 500px;
+    position: relative;
+  }
+  .contact .contact-inner .map .fa-location-dot {
+    position: absolute;
+    top: 60%;
+    right: 30%;
+    color: crimson;
+    font-size: 40px;
+    animation: home 2s linear infinite;
+    animation-fill-mode: both;
+  }
+  .contact .contact-inner .map iframe {
+    width: 100%;
+    height: 100%;
+  }
+  @keyframes home {
+    0% {
+      opacity: 0.3;
+      transform: scale(1);
+    }
+    25% {
+      opacity: 0.6;
+      transform: scale(1.2);
+    }
+    50% {
+      opacity: 1;
+      transform: scale(1.3);
+    }
+    75% {
+      opacity: 0.6;
+      transform: scale(1.2);
+    }
+    100% {
+      opacity: 0.3;
+      transform: scale(1);
+    }
   }
 }/*# sourceMappingURL=style.css.map */
