--- a/240203/style.scss
+++ b/240203/style.scss
@@ -263,11 +263,11 @@ header {
   height: 840px;
   input {
     display: none;
-    &[id="tab1"]:checked ~ .section-menu .first-menu {
+    &[id="tab1"]:checked ~ .section-menu {
       left: 0;
     }
-    &[id="tab2"]:checked ~ .section-menu .first-menu {
-      left: -1830px;
+    &[id="tab2"]:checked ~ .section-menu {
+      left: -1900px;
     }
   }
   .kim {
@@ -282,18 +282,18 @@ header {
     }
   }
   .section-menu {
-    width: 1800px;
+    width: 5000px;
     height: 520px;
-    margin: 0 auto;
+
     position: relative;
     overflow: hidden;
-
+    transition: all 0.5s ease-in;
     .first-menu {
       position: absolute;
-      left: 0;
+      left: 2%;
       top: 10%;
-      width: 5000px;
-      transition: all 0.5s ease-in;
+      width: 1960px;
+
       .birth {
         background: #ffbe6f;
       }
@@ -303,20 +303,10 @@ header {
       .style {
         background: #7cc1eb;
       }
-      .a {
-        background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg")
-          center/cover no-repeat;
-      }
-      .b {
-        background: url("./img/board.jpg") 50% 60% / cover no-repeat;
-      }
-      .c {
-        background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50%
-          70% / cover no-repeat;
-      }
+
       div {
         display: inline-block;
-        width: 400px;
+        width: 380px;
         height: 400px;
         border-radius: 50% 50% 0 0;
         margin: 0 100px;
@@ -392,6 +382,34 @@ header {
             }
           }
         }
+      }
+    }
+    .second-menu {
+      display: block;
+      position: absolute;
+      top: 10%;
+      left: 1960px;
+      height: 400px;
+      width: 1960px;
+
+      div {
+        display: inline-block;
+        width: 380px;
+        height: 400px;
+        border-radius: 50% 50% 0 0;
+        margin: 0 100px;
+        position: relative;
+      }
+      .a {
+        background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg")
+          center/cover no-repeat;
+      }
+      .b {
+        background: url("./img/board.jpg") 50% 60% / cover no-repeat;
+      }
+      .c {
+        background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50%
+          70% / cover no-repeat;
       }
     }
   }
@@ -787,10 +805,10 @@ header {
           flex-flow: column wrap;
           justify-content: center;
           align-items: end;
-          gap: 12%;
+          gap: 15%;
           span {
             color: #222;
-            font-size: map-get($font-size, large-heading);
+            font-size: map-get($font-size, medium-heading);
             font-family: map-get($font-family, main);
             font-weight: 900;
             font-style: italic;
@@ -945,11 +963,11 @@ header {
     height: 840px;
     input {
       display: none;
-      &[id="tab1"]:checked ~ .section-menu .first-menu {
+      &[id="tab1"]:checked ~ .section-menu {
         left: 0;
       }
-      &[id="tab2"]:checked ~ .section-menu .first-menu {
-        left: -1830px;
+      &[id="tab2"]:checked ~ .section-menu {
+        left: -806px;
       }
     }
     .kim {
@@ -957,25 +975,24 @@ header {
       text-align: center;
       h1 {
         color: #ff5484;
-        font-size: map-get($font-size, large-heading);
+        font-size: 35px;
         font-family: map-get($font-family, main);
-        font-weight: 900;
+        font-weight: 600;
         font-style: italic;
       }
     }
     .section-menu {
-      width: 1800px;
-      height: 520px;
-      margin: 0 auto;
+      width: 768px;
+      height: 1000px;
       position: relative;
-      overflow: hidden;
-
       .first-menu {
         position: absolute;
+        top: 5%;
         left: 0;
-        top: 10%;
-        width: 5000px;
+        width: 786px;
+
         transition: all 0.5s ease-in;
+
         .birth {
           background: #ffbe6f;
         }
@@ -985,31 +1002,22 @@ header {
         .style {
           background: #7cc1eb;
         }
-        .a {
-          background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg")
-            center/cover no-repeat;
-        }
-        .b {
-          background: url("./img/board.jpg") 50% 60% / cover no-repeat;
-        }
-        .c {
-          background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50%
-            70% / cover no-repeat;
-        }
         div {
           display: inline-block;
-          width: 400px;
-          height: 400px;
+          width: 220px;
+          height: 220px;
           border-radius: 50% 50% 0 0;
-          margin: 0 100px;
           position: relative;
+
+          margin: 5px;
+
           h1 {
             position: absolute;
             top: 30%;
             left: 50%;
             transform: translateX(-50%);
             font-family: map-get($font-family, main);
-            font-size: map-get($font-size, medium-heading);
+            font-size: 30px;
             color: #fff;
             font-style: italic;
           }
@@ -1022,15 +1030,15 @@ header {
             left: 50%;
             transform: translateX(-50%);
             font-family: map-get($font-family, sub);
-            font-size: map-get($font-size, small-heading);
+            font-size: 20px;
             text-align: center;
             span {
               font-family: map-get($font-family, sub);
-              font-size: 35px;
+              font-size: 25px;
             }
             .daytext {
               position: absolute;
-              left: 28%;
+              left: 33%;
               top: -20%;
               animation: daytext 3s 0.1s ease-out infinite;
               // animation-fill-mode: both;
@@ -1045,7 +1053,7 @@ header {
             }
             .personaltext {
               position: absolute;
-              left: 35%;
+              left: 39%;
               top: -20%;
               animation: personaltext 3s linear infinite;
               animation-delay: 0.2s;
@@ -1060,7 +1068,7 @@ header {
             }
             .styletext {
               position: absolute;
-              left: 35%;
+              left: 39%;
               top: -20%;
               animation: daytext 3s linear infinite;
               animation-delay: 0.3s;
@@ -1076,8 +1084,33 @@ header {
           }
         }
       }
+      .second-menu {
+        position: absolute;
+        top: 30%;
+        left: 0;
+        width: 768x;
+        div {
+          display: inline-block;
+          width: 220px;
+          height: 220px;
+          border-radius: 50% 50% 0 0;
+          margin: 5px;
+        }
+        .a {
+          background: url("https://img.freepik.com/premium-vector/constellation-scorpio-on-starry-night-background_158677-338.jpg")
+            center/cover no-repeat;
+        }
+        .b {
+          background: url("./img/board.jpg") 50% 60% / cover no-repeat;
+        }
+        .c {
+          background: url("./img/rachel-moenning-zjxYwd4HOu0-unsplash.jpg") 50%
+            70% / cover no-repeat;
+        }
+      }
     }
     .buttons {
+      display: none;
       width: 500px;
       height: 200px;
       text-align: center;
@@ -1086,8 +1119,8 @@ header {
       label {
         margin: 0 5px;
         display: inline-block;
-        width: 1em;
-        height: 1em;
+        width: 15px;
+        height: 15px;
         border-radius: 100%;
         background: #ff5484;
         cursor: pointer;
@@ -1116,9 +1149,9 @@ header {
       text-align: center;
       h1 {
         color: #ff5484;
-        font-size: map-get($font-size, large-heading);
+        font-size: 35px;
         font-family: map-get($font-family, main);
-        font-weight: 900;
+        font-weight: 600;
         font-style: italic;
       }
     }
@@ -1250,6 +1283,100 @@ header {
               font-size: 2em;
               color: #fff;
             }
+          }
+        }
+      }
+    }
+  }
+  .contact {
+    background: #f4e8df;
+    width: 100%;
+    height: 900px;
+    .seul {
+      padding: 100px 0 50px 0;
+      text-align: center;
+      h1 {
+        color: #ff5484;
+        font-size: 35px;
+        font-family: map-get($font-family, main);
+        font-weight: 900;
+        font-style: italic;
+      }
+    }
+    .contact-inner {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      align-items: center;
+      height: 600px;
+
+      .mysocial {
+        position: relative;
+        width: 500px;
+        height: 500px;
+        .network {
+          position: absolute;
+          right: 16%;
+          top: 20%;
+          font: bold 40px/1.5rem "Roboto";
+        }
+        .social {
+          position: absolute;
+          right: 65%;
+          top: 38%;
+          display: flex;
+          flex-flow: column nowrap;
+          i {
+            padding: 12px;
+            font-size: 30px;
+          }
+        }
+        .link {
+          position: absolute;
+          right: 25%;
+          top: 36%;
+          h3 {
+            padding: 16px;
+          }
+        }
+      }
+      .map {
+        width: 800px;
+        height: 500px;
+        position: relative;
+        .fa-location-dot {
+          position: absolute;
+          top: 60%;
+          right: 30%;
+          color: crimson;
+          font-size: 40px;
+          animation: home 2s linear infinite;
+          animation-fill-mode: both;
+        }
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+        @keyframes home {
+          0% {
+            opacity: 0.3;
+            transform: scale(1);
+          }
+          25% {
+            opacity: 0.6;
+            transform: scale(1.2);
+          }
+          50% {
+            opacity: 1;
+            transform: scale(1.3);
+          }
+          75% {
+            opacity: 0.6;
+            transform: scale(1.2);
+          }
+          100% {
+            opacity: 0.3;
+            transform: scale(1);
           }
         }
       }
